@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-01-24 r76008) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-02-02 r76043) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -165,8 +165,14 @@ show method
 > print(foo, digits = 4)
 S4 print method
 > 
-> setClassUnion("integer or NULL", members = c("integer","NULL"))
-> setClass("c1", representation(x = "integer", code = "integer or NULL"))
+> cn <- "integer or NULL"
+> setClassUnion(cn, members = c("integer", "NULL"))
+> setClass("c1", representation(x = "integer", code = cn))
+> stopifnot(exprs = {
++     cn %in% extends(getClass("NULL"))
++     cn %in% extends(getClass(".NULL"))
++     cn %in% extends(getClass("integer"))
++ })
 > nc <- new("c1", x = 1:2)
 > str(nc)# gave ^ANULL^A in 2.0.0
 Formal class 'c1' [package ".GlobalEnv"] with 2 slots
@@ -174,8 +180,6 @@ Formal class 'c1' [package ".GlobalEnv"] with 2 slots
   ..@ code: NULL
 > ##
 > 
-> 
-> library(stats4)
 > showMethods("coerce", classes=c("matrix", "numeric"))
 Function: coerce (package methods)
 from="ANY", to="matrix"
@@ -183,18 +187,10 @@ from="ANY", to="numeric"
 
 > ## {gave wrong result for a while in R 2.4.0}
 > 
-> ## the following showMethods() output tends to generate errors in the tests
-> ## whenever the contents of the packages change. Searching in the
-> ## diff's can easily mask real problems.  If there is a point
-> ## to the printout, e.g., to verify that certain methods exist,
-> ## hasMethod() would be a useful replacement
-> 
-> ## showMethods(where = "package:stats4")
-> ## showMethods("show")
-> ## showMethods("show")
-> ## showMethods("plot") # (ANY,ANY) and (profile.mle, missing)
-> ## showMethods(classes="mle")
-> ## showMethods(classes="matrix")
+> ## Most for "mle" in stats4:
+> for(f in c("coef", "confint", "logLik", "plot", "profile",
++ 	   "show", "summary", "update", "vcov"))
++     if(!hasMethods(f)) stop("no S4 methods found for ", f)
 > 
 > 
 > ##--- "[" fiasco before R 2.2.0 :
@@ -839,13 +835,16 @@ Creating a new generic function for 'qqplot' in the global environment
 > 
 > 
 > ## prototypes for virtual classes:  NULL if legal, otherwise 1st member
-> ## OptionalPosixct above includes NULL
-> stopifnot(is.null(getClass("OptionalPOSIXct")@prototype))
 > ## "IntOrChar" had invalid NULL prototype < 2.15.0
 > setClassUnion("IntOrChar", c("integer", "character"))
-> stopifnot(is.integer(getClass("IntOrChar")@prototype))
-> ## produced an error < 2.15.0
-> stopifnot(identical(isGeneric("&&"), FALSE))
+> stopifnot(exprs = {
++     ## OptionalPosixct above includes NULL
++     is.null   (getClass("OptionalPOSIXct")@prototype)
++     is.integer(getClass("IntOrChar")      @prototype) ## produced an error < 2.15.0
++     "IntOrChar" %in% extends(getClass("character"))
++     "IntOrChar" %in% extends(getClass("integer"))
++     identical(isGeneric("&&"), FALSE)
++ })
 > 
 > 
 > ## mapply() on S4 objects with a "non-primitive" length() method
@@ -1290,7 +1289,7 @@ Also defined by 'package2'
 > invisible(lapply(c("Z", "C", "C2", "C3"), removeClass))
 > 
 > 
-> ## Automatic coerce method creation: 
+> ## Automatic coerce method creation:
 > setClass("A", slots = c(foo = "numeric"))
 > setClass("Ap", contains = "A", slots = c(p = "character"))
 > cd <- getClassDef("Ap")
